# assext

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: lixiaolong.atlas  lixiaolong.skel
src/: file_manager.rs  image_processor.rs  main.rs
src/gui/: control_panel.rs  coordinate_calculator.rs  image_display.rs  mod.rs  selection_handler.rs
