[package]
name = "assext"
version = "0.1.0"
edition = "2021"
authors = ["pengwang <your-email@example.com>"]
description = "Asset file extension tool - A Spine file processing tool that generates numbers in specified regions"
license = "MIT"
repository = "https://github.com/yourusername/assext"
homepage = "https://github.com/yourusername/assext"
documentation = "https://docs.rs/assext"
keywords = ["spine", "asset", "image", "gui", "game-development"]
categories = ["multimedia::images", "development-tools"]

[[bin]]
name = "assext"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
image = "0.24"
imageproc = "0.23"
egui = "0.24"
eframe = "0.24"
walkdir = "2.4"
anyhow = "1.0"
rusttype = "0.9"